[project]
name = "persona-connectivity-probe"
version = "0.1.0"
description = "EKS probe: persona-service and embedding-service connectivity checks"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["probe"]
